--- a/rebar.config
+++ b/rebar.config
@@ -10,7 +10,7 @@
 
 {deps, [
     % Mesosphere and DC/OS repos
-    {erldns, {git, "https://github.com/dcos/erl-dns.git", {branch, "master"}}},
+    {erldns, {git, "https://github.com/dcos/erl-dns.git", {branch, "urbanserj/records-by-name"}}},
     {gen_netlink, {git, "https://github.com/mesosphere/gen_netlink.git", {branch, "master"}}},
     {inotify, {git, "https://github.com/goeldeepak/inotify.git", {branch, "master"}}},
     {ip_vs_conn, {git, "https://github.com/mesosphere/ip_vs_conn.git", {branch, "master"}}},
