Add lashup metrics

--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
     {inotify, {git, "https://github.com/dcos/inotify.git", {branch, "master"}}},
     {ip_vs_conn, {git, "https://github.com/mesosphere/ip_vs_conn.git", {branch, "master"}}},
     {riak_dt, ".*", {git, "https://github.com/dcos/riak_dt.git", {branch, "make-faster"}}},
-    {lashup, ".*", {git, "https://github.com/dcos/lashup.git", {branch, "master"}}},
+    {lashup, ".*", {git, "https://github.com/dcos/lashup.git", {branch, "urbanserj/metrics"}}},
     {mesos_state, {git, "https://github.com/dcos/mesos_state.git", {branch, "master"}}},
     {tcp_metrics, {git, "https://github.com/mesosphere/tcp_metrics.git", {branch, "master"}}},
     {telemetry, {git, "https://github.com/dcos/telemetry-net.git", {branch, "master"}}},
