Upgrade OTP version

--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{minimum_otp_vsn, "20.0"}.
+{minimum_otp_vsn, "20.3"}.
 
 {erl_opts, [
     debug_info,
@@ -13,11 +13,11 @@
     {erldns, {git, "https://github.com/dcos/erl-dns.git", {branch, "master"}}},
     {gen_netlink, {git, "https://github.com/mesosphere/gen_netlink.git", {branch, "master"}}},
     {inotify, {git, "https://github.com/dcos/inotify.git", {branch, "master"}}},
-    {ip_vs_conn, {git, "https://github.com/mesosphere/ip_vs_conn.git", {branch, "master"}}},
+    {ip_vs_conn, {git, "https://github.com/mesosphere/ip_vs_conn.git", {branch, "urbanserj/cleanup"}}},
     {riak_dt, ".*", {git, "https://github.com/dcos/riak_dt.git", {branch, "make-faster"}}},
     {lashup, ".*", {git, "https://github.com/dcos/lashup.git", {branch, "master"}}},
-    {mesos_state, {git, "https://github.com/dcos/mesos_state.git", {branch, "master"}}},
-    {tcp_metrics, {git, "https://github.com/mesosphere/tcp_metrics.git", {branch, "master"}}},
+    {mesos_state, {git, "https://github.com/dcos/mesos_state.git", {branch, "urbanserj/cleanup"}}},
+    {tcp_metrics, {git, "https://github.com/mesosphere/tcp_metrics.git", {branch, "urbanserj/cleanup"}}},
     {telemetry, {git, "https://github.com/dcos/telemetry-net.git", {branch, "master"}}},
 
     % External repos
@@ -37,8 +37,6 @@
     hut,
 
     % Debugging tools
-    {eflame, {git, "https://github.com/proger/eflame.git", {branch, "master"}}},
-    eper,
     recon
 ]}.
 
@@ -52,8 +50,6 @@
         dcos_overlay,
         dcos_rest,
         {recon, load},
-        {eper, load},
-        {eflame, load},
         {debugger, load}
     ]},
 
@@ -69,10 +65,6 @@
         {mkdir, "data/"},
         {copy, "apps/dcos_dns/data/zones.json", "data/zones.json"}
     ]}
-]}.
-
-{plugins, [
-    {rebar_covertool, "1.0.0"}
 ]}.
 
 {eunit_opts, [
@@ -110,6 +102,9 @@
         ]}
     ]},
     {test, [
+        {plugins, [
+            {rebar_covertool, "1.2.0"}
+        ]},
         {deps, [
             meck,
             proper
@@ -143,8 +138,6 @@
                 dcos_dns,
                 dcos_rest,
                 {recon, load},
-                {eper, load},
-                {eflame, load},
                 {debugger, load}
             ]},
             {dev_mode, false},
